--- a/redis-configs/redis-stack-pvc.yml
+++ b/redis-configs/redis-stack-pvc.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: redisinsight-pvc
+  name: redis-stack-pvc
   namespace: product-app
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 500Mi
+      storage: 1Gi
+  storageClassName: standard
