--- a/database-configs/database-statefulset.yml
+++ b/database-configs/database-statefulset.yml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: database-deployment
+  name: database-statefulset
   namespace: product-app
   labels:
     app: postgres-database
 spec:
+  serviceName: database-service
   replicas: 1
   selector:
     matchLabels:
@@ -42,10 +43,17 @@ spec:
                     key: password
               - name: POSTGRES_DB
                 value: productdb
+              - name: PGDATA
+                value: /var/lib/postgresql/data/pgdata
             volumeMounts:
               - name: postgres-storage
                 mountPath: /var/lib/postgresql/data
-      volumes:
-        - name: postgres-storage
-          persistentVolumeClaim:
-            claimName: postgres-pvc
+  volumeClaimTemplates:
+  - metadata:
+      name: postgres-storage
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: "standard"
+      resources:
+        requests:
+          storage: 10Gi
