--- a/kafka-configs/kafka-zookeeper-statefulset.yml
+++ b/kafka-configs/kafka-zookeeper-statefulset.yml
@@ -1,10 +1,11 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: kafka-zookeeper
+  name: kafka-zookeeper-statefulset
   labels:
     app: kafka-zookeeper
 spec:
+  serviceName: kafka-zookeeper-service
   replicas: 1
   selector:
     matchLabels:
@@ -25,6 +26,15 @@ spec:
               value: "2181"
             - name: ZOOKEEPER_TICK_TIME
               value: "2000"
+            - name: ZOOKEEPER_DATA_DIR
+              value: "/var/lib/zookeeper/data"
+            - name: ZOOKEEPER_LOG_DIR
+              value: "/var/lib/zookeeper/log"
+          volumeMounts:
+            - name: zookeeper-data
+              mountPath: /var/lib/zookeeper/data
+            - name: zookeeper-log
+              mountPath: /var/lib/zookeeper/log
           resources:
             requests:
               cpu: "100m"
@@ -48,6 +58,11 @@ spec:
               value: "PLAINTEXT://kafka-zookeeper-service:9092,PLAINTEXT_HOST://localhost:30092"
             - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
               value: "1"
+            - name: KAFKA_LOG_DIRS
+              value: "/var/lib/kafka/data"
+          volumeMounts:
+            - name: kafka-data
+              mountPath: /var/lib/kafka/data
           resources:
             requests:
               cpu: "500m"
@@ -56,4 +71,29 @@ spec:
             limits:
               memory: "2Gi"
               ephemeral-storage: "4Gi"
+  volumeClaimTemplates:
+  - metadata:
+      name: zookeeper-data
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: "standard"
+      resources:
+        requests:
+          storage: 2Gi
+  - metadata:
+      name: zookeeper-log
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: "standard"
+      resources:
+        requests:
+          storage: 1Gi
+  - metadata:
+      name: kafka-data
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      storageClassName: "standard"
+      resources:
+        requests:
+          storage: 10Gi
 
