--- a/redis-configs/redis-service.yml
+++ b/redis-configs/redis-service.yml
@@ -7,7 +7,7 @@ metadata:
     app: redis-service
 spec:
   selector:
-    app: redis-deployment
+    app: redis-statefulset
   ports:
     - protocol: TCP
       port: 6379
